--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
-    "gulp-htmlmin": "^5.0.1"
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-jsonminify": "^1.1.0"
   }
 }
